add pay subscription functions
