# docs/swagger.json
@@ -65,7 +65,7 @@
                 "summary": "Sign in API",
                 "parameters": [
                     {
-                        "description": "SignIn",
+                        "description": "SignIn body",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -122,6 +122,45 @@
                 }
             }
         },
+        "/tenant/order": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Pay subscription API",
+                "parameters": [
+                    {
+                        "description": "PaySubscription body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/client.PaySubscriptionRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/client.OrderResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    }
+                }
+            }
+        },
         "/tenant/restaurant": {
             "post": {
                 "security": [
@@ -165,6 +204,13 @@
     "definitions": {
         "client.CreateRestaurantRequest": {
             "type": "object",
+            "required": [
+                "location",
+                "name",
+                "notes",
+                "postalCode",
+                "type"
+            ],
             "properties": {
                 "contactEmail": {
                     "type": "string"
@@ -219,6 +265,44 @@
                 },
                 "price": {
                     "type": "string"
+                }
+            }
+        },
+        "client.OrderResponse": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "orderDate": {
+                    "type": "string"
+                },
+                "restaurantId": {
+                    "type": "integer"
+                },
+                "status": {
+                    "$ref": "#/definitions/enum.OrderStatus"
+                },
+                "tenantId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "client.PaySubscriptionRequest": {
+            "type": "object",
+            "required": [
+                "restaurantId",
+                "subscriptionId"
+            ],
+            "properties": {
+                "restaurantId": {
+                    "type": "integer"
+                },
+                "subscriptionId": {
+                    "type": "integer"
                 }
             }
         },
@@ -445,8 +529,21 @@
                 "FEMALE"
             ],
             "x-enum-varnames": [
-                "MALE",
-                "FEMALE"
+                "GENDER_MALE",
+                "GENDER_FEMALE"
+            ]
+        },
+        "enum.OrderStatus": {
+            "type": "string",
+            "enum": [
+                "PENDING",
+                "COMPLETED",
+                "CANCELED"
+            ],
+            "x-enum-varnames": [
+                "ORDER_PENDING",
+                "ORDER_COMPLETED",
+                "ORDER_CANCELED"
             ]
         },
         "enum.TenantType": {
@@ -459,11 +556,11 @@
                 "FB"
             ],
             "x-enum-varnames": [
-                "PERSONAL",
-                "BUSINESS",
-                "FOOD",
-                "BEVERAGE",
-                "FOOD_AND_BEVERAGE"
+                "TENANT_PERSONAL",
+                "TENANT_BUSINESS",
+                "RESTAURANT_FOOD",
+                "RESTAURANT_BEVERAGE",
+                "RESTAURANT_FOOD_AND_BEVERAGE"
             ]
         },
         "enum.UserStatus": {
@@ -476,11 +573,11 @@
                 "DELETED"
             ],
             "x-enum-varnames": [
-                "ACTIVE",
-                "INACTIVE",
-                "PENDING",
-                "LOCKED",
-                "DELETED"
+                "USER_ACTIVE",
+                "USER_INACTIVE",
+                "USER_PENDING",
+                "USER_LOCKED",
+                "USER_DELETED"
             ]
         }
     },
